fix: align status panel icons (#5746)

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -84,6 +84,10 @@
             @include responsive-widths();
         }
 
+        &:first-child {
+            margin-top: 7px;
+        }
+
         &:not(:first-child) {
             border-left: 1px solid $argo-color-gray-3;
         }
